<resources>
    <string name="app_name">Calculator</string>
    <string name="result_text">Result</string>
    <string name="text_00">00</string>
    <string name="text_0">0</string>
    <string name="text_point" >.</string>
    <string name="text_eqeual">=</string>
    <string name="text_plus">+</string>
    <string name="text_minus">-</string>
    <string name="text_mul">*</string>
    <string name="text_div">/</string>
    <string name="text_delete">Delete</string>
    <string name="text_mod">%</string>
    <string name="text_clear">Clear</string>
    <string name="text_1">1</string>
    <string name="text_2">2</string>
    <string name="text_3">3</string>
    <string name="text_4" >4</string>
    <string name="text_5">5</string>
    <string name="text_6">6</string>
    <string name="text_7" >7</string>
    <string name="text_8">8</string>
    <string name="text_9">9</string>
</resources>