<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp">

    <TextView
        android:id="@+id/txtFirst"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:text="Result" />

    <TextView
        android:id="@+id/txtResult"
        android:layout_width="386dp"
        android:layout_height="109dp"
        android:layout_weight="0"
        android:fontFamily="sans-serif-black"
        android:text="0"
        android:textSize="30sp" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btnClear"
                android:layout_width="89dp"
                android:layout_height="92dp"
                android:layout_weight="1"
                android:text="@string/text_clear"
                android:textSize="14sp"
                app:backgroundTint="@android:color/holo_red_light" />

            <Button
                android:id="@+id/btnDiv"
                android:layout_width="89dp"
                android:layout_height="92dp"
                android:layout_weight="1"
                android:text="@string/text_div"
                android:textSize="18sp"
                app:backgroundTint="@color/teal_200" />

            <Button
                android:id="@+id/btnDelete"
                android:layout_width="89dp"
                android:layout_height="92dp"
                android:layout_weight="1"
                android:text="@string/text_delete"
                android:textSize="12sp"
                app:backgroundTint="@android:color/holo_red_light" />

            <Button
                android:id="@+id/btnMod"
                android:layout_width="89dp"
                android:layout_height="92dp"
                android:layout_weight="1"
                android:text="@string/text_mod"
                android:textSize="18sp"
                app:backgroundTint="@color/teal_200" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn7"
                android:layout_width="89dp"
                android:layout_height="92dp"
                android:layout_weight="1"
                android:onClick="numBtn"
                android:text="@string/text_7"
                android:textSize="18sp"
                app:backgroundTint="@android:color/holo_blue_light" />

            <Button
                android:id="@+id/btn8"
                android:layout_width="89dp"
                android:layout_height="92dp"
                android:layout_weight="1"
                android:onClick="numBtn"
                android:text="@string/text_8"
                android:textSize="18sp"
                app:backgroundTint="@android:color/holo_blue_light" />

            <Button
                android:id="@+id/btn9"
                android:layout_width="89dp"
                android:layout_height="92dp"
                android:layout_weight="1"
                android:onClick="numBtn"
                android:text="@string/text_9"
                android:textSize="18sp"
                app:backgroundTint="@android:color/holo_blue_light" />

            <Button
                android:id="@+id/btnMul"
                android:layout_width="89dp"
                android:layout_height="92dp"
                android:layout_weight="1"
                android:text="@string/text_mul"
                android:textSize="18sp"
                app:backgroundTint="@color/teal_200" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn4"
                android:layout_width="89dp"
                android:layout_height="92dp"
                android:layout_weight="1"
                android:onClick="numBtn"
                android:text="@string/text_4"
                android:textSize="18sp"
                app:backgroundTint="@android:color/holo_blue_light" />

            <Button
                android:id="@+id/btn5"
                android:layout_width="89dp"
                android:layout_height="92dp"
                android:layout_weight="1"
                android:onClick="numBtn"
                android:text="@string/text_5"
                android:textSize="18sp"
                app:backgroundTint="@android:color/holo_blue_light" />

            <Button
                android:id="@+id/btn6"
                android:layout_width="89dp"
                android:layout_height="92dp"
                android:layout_weight="1"
                android:onClick="numBtn"
                android:text="@string/text_6"
                android:textSize="18sp"
                app:backgroundTint="@android:color/holo_blue_light" />

            <Button
                android:id="@+id/btnMinus"
                android:layout_width="89dp"
                android:layout_height="92dp"
                android:layout_weight="1"
                android:text="@string/text_minus"
                android:textSize="18sp"
                app:backgroundTint="@color/teal_200" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn1"
                android:layout_width="89dp"
                android:layout_height="92dp"
                android:layout_weight="1"
                android:onClick="numBtn"
                android:text="@string/text_1"
                android:textSize="18sp"
                app:backgroundTint="@android:color/holo_blue_light" />

            <Button
                android:id="@+id/btn2"
                android:layout_width="89dp"
                android:layout_height="92dp"
                android:layout_weight="1"
                android:onClick="numBtn"
                android:text="@string/text_2"
                android:textSize="18sp"
                app:backgroundTint="@android:color/holo_blue_light" />

            <Button
                android:id="@+id/btn3"
                android:layout_width="89dp"
                android:layout_height="92dp"
                android:layout_weight="1"
                android:onClick="numBtn"
                android:text="@string/text_3"
                android:textSize="18sp"
                app:backgroundTint="@android:color/holo_blue_light" />

            <Button
                android:id="@+id/btnPlus"
                android:layout_width="89dp"
                android:layout_height="92dp"
                android:layout_weight="1"
                android:text="@string/text_plus"
                android:textSize="18sp"
                app:backgroundTint="@color/teal_200" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn0"
                android:layout_width="89dp"
                android:layout_height="92dp"
                android:layout_weight="1"
                android:onClick="numBtn"
                android:text="@string/text_0"
                android:textSize="18sp"
                app:backgroundTint="@android:color/holo_blue_light" />

            <Button
                android:id="@+id/btn00"
                android:layout_width="89dp"
                android:layout_height="92dp"
                android:layout_weight="1"
                android:onClick="numBtn"
                android:text="@string/text_00"
                android:textSize="18sp"
                app:backgroundTint="@android:color/holo_blue_light" />

            <Button
                android:id="@+id/btnPoint"
                android:layout_width="89dp"
                android:layout_height="92dp"
                android:layout_weight="1"
                android:onClick="numBtn"
                android:text="@string/text_point"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btnEqeual"
                android:layout_width="89dp"
                android:layout_height="92dp"
                android:layout_weight="1"
                android:text="@string/text_eqeual"
                android:textSize="18sp"
                app:backgroundTint="@android:color/holo_orange_light" />

        </TableRow>

    </TableLayout>

</LinearLayout>